[workspace]
members = [ "hello-world", "math", "pell-number", "protobuf-parsing", "lang/lifetime/forums", "lang/modules", "lang/std/borrow_cow", "lang/tests", "lang/traits", "lang/unsafe/mutable-static", "lang/unsafe/raw-pointers" , "lang/macros"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
